feat: update httpclient with ExecuteSignedOperation
