# Runtime/Beam/Api/BeamPlayerClient/api/openapi.yaml
@@ -1128,6 +1128,29 @@ paths:
       summary: Initializes an operation. Used by Game SDKs to get transaction results.
       tags:
       - Operation
+  /v1/player/operation/{opId}/execute:
+    post:
+      operationId: executeSignedOperation
+      parameters:
+      - explode: false
+        in: path
+        name: opId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CommonOperationResponse'
+          description: ""
+      security:
+      - beam-api-key: []
+      summary: Executes operation for given id
+      tags:
+      - Operation
   /v1/player/exchange/quote/input:
     get:
       operationId: getQuoteForInput
@@ -1469,6 +1492,71 @@ paths:
       summary: ""
       tags:
       - Connector
+  /v1/player/stats/{assetAddress}:
+    post:
+      operationId: getAssetsStats
+      parameters:
+      - explode: false
+        in: path
+        name: assetAddress
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StatsRequestInput'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StatsResponse'
+          description: ""
+      security:
+      - beam-api-key: []
+      summary: Get assets stats
+      tags:
+      - Stats
+  /v1/player/stats/{assetAddress}/assets/{assetId}:
+    post:
+      operationId: getAssetStats
+      parameters:
+      - explode: false
+        in: path
+        name: assetAddress
+        required: true
+        schema:
+          type: string
+        style: simple
+      - explode: false
+        in: path
+        name: assetId
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StatsRequestInput'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StatsResponse'
+          description: ""
+      security:
+      - beam-api-key: []
+      summary: Get asset stats
+      tags:
+      - Stats
 components:
   schemas:
     GetAssetsForUserBodyInput:
@@ -3357,6 +3445,35 @@ components:
       - status
       - updatedAt
       type: object
+    StatsRequestInput:
+      example:
+        chainId: 0.8008281904610115
+        attributes:
+        - value: value
+          key: key
+        - value: value
+          key: key
+      properties:
+        attributes:
+          items:
+            $ref: '#/components/schemas/GetAssetsForContractBodyInput_attributes_inner'
+          nullable: true
+          type: array
+        chainId:
+          default: 13337
+          type: number
+      type: object
+    StatsResponse:
+      example:
+        count:
+          listed: 6.027456183070403
+          tokens: 0.8008281904610115
+      properties:
+        count:
+          $ref: '#/components/schemas/StatsResponse_count'
+      required:
+      - count
+      type: object
     check_200_response_info_value:
       additionalProperties: true
       properties:
@@ -4448,6 +4565,19 @@ components:
       - isActive
       - sessionAddress
       - startTime
+      type: object
+    StatsResponse_count:
+      example:
+        listed: 6.027456183070403
+        tokens: 0.8008281904610115
+      properties:
+        tokens:
+          type: number
+        listed:
+          type: number
+      required:
+      - listed
+      - tokens
       type: object
   securitySchemes:
     beam-api-key:
