# Runtime/Beam/Api/BeamPlayerClient/src/BeamPlayerClient/Model/StatsResponse.cs
@@ -1,0 +1,82 @@
+/*
+ * Player API
+ *
+ * The Player API is a service to integrate your game with Beam
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Runtime.Serialization;
+using System.Text;
+using System.Text.RegularExpressions;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using Newtonsoft.Json.Linq;
+using OpenAPIDateConverter = BeamPlayerClient.Client.OpenAPIDateConverter;
+
+namespace BeamPlayerClient.Model
+{
+    /// <summary>
+    /// StatsResponse
+    /// </summary>
+    [DataContract(Name = "StatsResponse")]
+    public partial class StatsResponse
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="StatsResponse" /> class.
+        /// </summary>
+        [JsonConstructorAttribute]
+        protected StatsResponse() { }
+        /// <summary>
+        /// Initializes a new instance of the <see cref="StatsResponse" /> class.
+        /// </summary>
+        /// <param name="count">count (required).</param>
+        public StatsResponse(StatsResponseCount count = default(StatsResponseCount))
+        {
+            // to ensure "count" is required (not null)
+            if (count == null)
+            {
+                throw new ArgumentNullException("count is a required property for StatsResponse and cannot be null");
+            }
+            this.Count = count;
+        }
+
+        /// <summary>
+        /// Gets or Sets Count
+        /// </summary>
+        [DataMember(Name = "count", IsRequired = true, EmitDefaultValue = true)]
+        public StatsResponseCount Count { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class StatsResponse {\n");
+            sb.Append("  Count: ").Append(Count).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public virtual string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, Newtonsoft.Json.Formatting.Indented);
+        }
+
+    }
+
+}
